--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -7,7 +7,7 @@ metadata:
   name: manager-role
 rules:
 - apiGroups:
-  - samplecontroller.k8s.io
+  - apps
   resources:
   - deployments
   verbs:
@@ -19,7 +19,7 @@ rules:
   - update
   - watch
 - apiGroups:
-  - samplecontroller.k8s.io
+  - apps
   resources:
   - deployments/status
   verbs:
